--- a/trunk/assets/scss/callbacks/html-form-elements.scss
+++ b/trunk/assets/scss/callbacks/html-form-elements.scss
@@ -4,6 +4,7 @@
   select {
     &.oh-hidden-select {
       opacity: 0;
+      position: absolute;
       z-index: -1;
       height: 0;
       max-height: 0;
@@ -39,7 +40,7 @@
       cursor: pointer;
       height: 16px;
       padding: 12px 16px;
-      margin-top: -40px;
+      //margin-top: -40px;
     }
 
     .text {
